Fix: Set Python 3.11 to avoid httpx/OpenAI SDK errors

--- a/.render.yaml
+++ b/.render.yaml
@@ -3,18 +3,10 @@ services:
     name: blog-generator
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
+    pythonVersion: 3.11
     envVars:
-      - key: API_KEY
+      - key: OPENAI_API_KEY
       - key: POSTHOG_API_KEY
       - key: POSTHOG_HOST
       - key: SECRET_KEY
-
-# render.yaml
-services:
-  - type: web
-    name: blog-generator
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
-    pythonVersion: 3.11
