--- a/.render.yaml
+++ b/.render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    pythonVersion: 3.11
+    runtime: python-3.11.9  # ✅ this line forces correct Python version
     envVars:
       - key: OPENAI_API_KEY
       - key: POSTHOG_API_KEY
